corpus/header.txt
==================
Header definitions
==================

NAME    AGE   COLOR

---

(source_file
    (header_definition
        (column_definition)
        (column_definition)
        (column_definition)))
